--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,37 @@
-theme: jekyll-theme-dinky
+# Dependencies
+markdown:         kramdown
+highlighter:      rouge
+
+# Setup
+title:            Turtle2Go
+tagline:          'A Jekyll theme'
+description:      'Test Homepage for Turtle2Go'
+url:              https://Turtle2Go.github.io/hydeout
+baseurl:          # the optional subpath of your site, e.g. "/blog"
+                  # NB: This applies to all pages in your Jekyll site.
+                  # If you want to move just the blog index pages but keep
+                  # other pages at root, see the paginate_path and
+                  # sidebar_blog_link below.
+
+author:
+  name:           'Turtle2Go'
+  url:            https://twitter.com/Turtle2Go
+
+paginate:         10
+# paginate_path:    '/page:num'
+                    # Or '/blog/page:num' if you want to move your index pages
+
+plugins:
+  - jekyll-feed
+  - jekyll-gist
+  - jekyll-paginate
+
+# Custom vars
+version:            3.5.3
+sidebar_home_link:  true
+# sidebar_blog_link:  '/blog'   # By default, your home page is your blog
+                                # page. If you change your paginate_path,
+                                # set this to the root of the paginate_path
+                                # to enable a separate blog link.
+github:
+  repo:             https://github.com/Turtle2Go/hydeout
