--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ plugins:
   - jekyll-paginate
 
 # Custom vars
-version:            3.5.3
-sidebar_home_link:  true
+#version:            3.5.3
+#sidebar_home_link:  true
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
                                 # page. If you change your paginate_path,
                                 # set this to the root of the paginate_path
