--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: turtle2Go
+title: turtle2go
 email: turtle2gogo@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Learning doesn’t have to feel boring or forced. Find somethingyou love to make it exciting.
